tests/error/struct_errors/constructor_missing_arg.err
Guppy compilation failed. Error in file $FILE:15

13:    @guppy(module)
14:    def main() -> None:
15:        MyStruct()
           ^^^^^^^^^^
GuppyTypeError: Not enough arguments passed (expected 1, got 0)
